Travel::Routing::DE::VRR 2.16 - Wed Jul 05 2017

    * Fix encoding issues caused by recent API changes

Travel::Routing::DE::VRR 2.15 - Sat Mar 04 2017

    * Remove support for Vorarlberger Verkehrsverbund (VVV) backend
      (no longer working, apparently superseded by non-EFA software)
    * Update EFA URLs for Verkehrsverbund Rhein-Ruhr (VRR2) and
      Verkehrsverbund Rhein-Neckar (VRN) backends
    * Add support for Braunschweiger Verkehrs-GmbH (BSVG)

Travel::Routing::DE::VRR 2.14 - Mon Oct 19 2015

    * Remove support for the STV / Verbundlinie Steiermark EFA entry point
      (returns data with broken encoding)
    * Add VVO, VRN, VMV, KVV, TLEM and VBL EFA entry points

Travel::Routing::DE::VRR 2.13 - Thu Jul 23 2015

    * efa: Add -a / --accessibility option
    * efa: Add -B / --bike-info option
    * efa: Change --ignore-info default to ignore less when -a / -B is set
    * EFA->new: Add boolean config options with_low_platform, with_wheelchair,
      without_elevators, without_escalators and without_solid_stairs

Travel::Routing::DE::VRR 2.12 - Thu Jun 25 2015

    * Route::Part: Deprecate ->extra accessor. Use ->regular_notes instead
    * Route::Part: Add ->regular_notes and ->current_notes accessors.
      Note that current_notes is NOT STABLE yet. It may be change without
      further notice.
    * Route::Part: Add ->footpath_{duration,parts,type} accessors
    * efa: Show current route information provided by the EFA backend, such
      as cancelled stops or diversions.
    * efa -E: Show transfer walking duration when available
    * efa: Extend --ignore-info default (this option will probably be
      overhauled or removed in a future release)
    * Add Travel::Routing::DE::EFA::Route::Message module

Travel::Routing::DE::VRR 2.11 - Sun Jun 14 2015

    * efa: Fix encoding issues when using -w, -t, -d, -a and similar
    * Travel::Routing::DE::EFA::Route::Part: Add train_product accessor
    * Improve support for walking connections